--- a/jq255.md
+++ b/jq255.md
@@ -1231,7 +1231,7 @@ Smart and Warinschi][].
 
 It has been [noted][] that while the construction with a half-width
 challenge is safe *as a signature scheme*, some advanced protocols try
-to also use signatures as commiments on a unique message: these
+to also use signatures as commitments on a unique message: these
 protocols assume that it is infeasible for the signer to produce a
 public key `Q`, a signature `sig` and two distinct messages `M0` and
 `M1` such that `verify(Q, sig, M0)` and `verify(Q, sig, M1)` both return
