Tidy markdown links

--- a/jq255.md
+++ b/jq255.md
@@ -49,8 +49,8 @@ document:
 The underlying curves are specific double-odd curves (curves whose order
 is twice an odd integer) interpreted with a coordinate system such that
 the curve equation is a Jacobi quartic, as described in the
-[double-odd Jacobi quartic whitepaper][]. More information on double-odd
-curves can be found on the [double-odd elliptic curves Web site][].
+[double-odd Jacobi quartic whitepaper]. More information on double-odd
+curves can be found on the [double-odd elliptic curves Web site].
 
 ## Notations
 
