Tidy markdown links

--- a/jq255.md
+++ b/jq255.md
@@ -143,7 +143,7 @@ jq255e:
 
 In this section, practical procedures for computing point operations are
 presented using pseudocode in a syntax compatible with the Python language
-and the [SageMath][] mathematics system. This syntax closely follows the
+and the [SageMath] mathematics system. This syntax closely follows the
 abstract mathematical notation otherwise used in this document, with the
 following exceptions:
 
