--- a/jq255.md
+++ b/jq255.md
@@ -114,8 +114,8 @@ jq255e:
   a' = -2*a      = 0
   b' = a^2 - 4*b = 8
   equation: e^2 = 8*u^4 + 1
+  group order: r = 2^254 - 131528281291764213006042413802501683931
   curve order: n = 2*r
-     r = 2^254 - 131528281291764213006042413802501683931
   conventional generator: G = (eg, ug)
      eg = -3
      ug = -1
