--- a/jq255.md
+++ b/jq255.md
@@ -52,7 +52,7 @@ the curve equation is a Jacobi quartic, as described in the
 [double-odd Jacobi quartic whitepaper]. More information on double-odd
 curves can be found on the [double-odd elliptic curves Web site].
 
-## Notations
+## Conventions and Notation Used in this Document
 
   - `x^y` denotes exponentiation of `x` by the integer `y`. This is
     applicable to any type of `x` for which a multiplication operation
@@ -95,13 +95,18 @@ curves can be found on the [double-odd elliptic curves Web site].
     *representants* of the group element. The group law is denoted
     additively: for any two group elements, their sum is computed by
     simply adding together their representant points over the curve;
-    since `N` has order 2, it does not matter which representant is used
-    for each group element. The encoding process ensures that the same
-    output is obtained for both representants of the same group element.
+    since `N` has order 2, it does not matter which representants are
+    used. The encoding process uses, for each group element, a specific
+    representant, and automatically computes it if given the other
+    representant, so that the encoded format is canonical. Similarly,
+    group element equality abstracts away the representants.
 
   - Integers modulo `r` are called *scalars*. Since `r` is prime, the
-    scalars constitute a finite field. A group element can be multiplied
-    by a scalar by using any integer representant of the scalar.
+    scalars constitute a finite field. Group elements can be multiplied
+    by scalars: for a scalar `s` and a group element `P`, the product is
+    `s*P = P + P + ... + P`, where the group law is applied `si - 1`
+    times (with `si` being the integer representant of `s`, in the `0`
+    to `r-1` range).
 
 The jq255e curve parameters are the following:
 
@@ -180,7 +185,7 @@ The pseudocode assumes that the following functions are available:
     in the finite field). **Important:** when `x` is a square, the
     returned square root is non-negative.
 
-  - `is_square(x)` return `True` if `x` is a square in the finite field,
+  - `is_square(x)` returns `True` if `x` is a square in the finite field,
     or `False` otherwise.
 
   - `scalar_to_int(s)` and `int_to_scalar(j)` compute the same
