--- a/jq255.md
+++ b/jq255.md
@@ -166,9 +166,9 @@ The pseudocode assumes that the following functions are available:
 
   - `half(x)` divides the field element `x` by two. It is usually
     implemented by a right-shift by 1 bit, then the conditional addition
-    of the constant `(q+1)/2` if the dropped bit was non-zero. It is
-    considered to be a "fast" operation (i.e. at least as fast as an
-    addition in the field).
+    of the constant `(q+1)/2` if the dropped bit was non-zero. Such an 
+    implementation is considered to be a "fast" operation (i.e. at least
+    as fast as an addition in the field).
 
   - `invert(x)` returns the multiplicative inverse of `x` in the field.
     Zero has no multiplicative inverse, but it is sometimes convenient
