Added an example of a CSRNG.

--- a/jq255.md
+++ b/jq255.md
@@ -192,10 +192,12 @@ The pseudocode assumes that the following functions are available:
     operations as `int()` and `GFq()`, respectively, but for scalars,
     which are integers modulo the prime `r`.
 
-  - `secure_random(m)`, for an integer `m >= 1`, returns a sequence
-    of `m` random bytes obtained from a cryptographically secure source,
-    with a uniform probability distribution. This is used only for
-    private key generation in the specification of high-level protocols.
+  - `secure_random(m)`, for an integer `m >= 1`, returns a sequence of
+    `m` random bytes obtained from a cryptographically secure source,
+    with a uniform probability distribution (e.g. `/dev/urandom` or the
+    `getrandom()` system call on many Unix-like operating syustems).
+    This is used only for private key generation in the specification of
+    high-level protocols.
 
 If an addition, subtraction or multiplication uses as operands a field
 element and an integer (usually small), then the integer is first
