--- a/jq255.md
+++ b/jq255.md
@@ -216,7 +216,7 @@ with Atkin's algorithm:
  2. Compute: `d = 2*x*c^2`
  3. Compute the square root candidate: `z = x*c*(d - 1)`
 
-The obtained candidate MUST be checked (by comparing `z^2` with `x`).
+The obtained candidate MUST be checked (by comparing `z^2` with `x` and finding them equivalent).
 Moreover, if `z` is indeed a square root of `x`, then it MUST be
 normalized to a non-negative value (i.e. if `sgn(z) = 1`, then `z` must
 be replaced with `-z`). The use of this fixed convention for square
