--- a/jq255.md
+++ b/jq255.md
@@ -225,7 +225,7 @@ hash-to-group operations.
 
 `is_square(x)` can be implemented as a simple wrapper around `sqrt(x)`,
 though faster implementations are possible with the [Legendre/Jacobi
-symbol][]. A fast, constant-time implementation of that operation can be
+symbol]. A fast, constant-time implementation of that operation can be
 obtained as a straightforward derivative of the [optimized binary
 GCD][]; on some small microcontrollers, this `is_square()`
 implementation can be about six times faster than the full square root
