--- a/jq255.md
+++ b/jq255.md
@@ -294,7 +294,7 @@ testing purposes.
 ### Extended Coordinates
 
 In order to reduce the number of field element divisions (which are
-usually quite expensive in software implementations, relatively to
+usually quite expensive in software implementations, relative to
 additions and multiplications), the following internal representation is
 recommended: a point `P = (e, u)` is represented by the quadruplet
 `(E:Z:U:T)` of field elements, with the following rules:
