--- a/jq255.md
+++ b/jq255.md
@@ -337,7 +337,7 @@ point addition formulas, but they offer fast and complete formulas for
 point doublings. Thus, a strategy for computing a sequence of several
 successive point doublings is to convert the source point from EZUT to
 XWJ coordinates, compute the doublings in XWJ, then convert the result
-back into EZUT coordinates.
+back into EZUT coordinates. Such a strategy is used later in doubling formulas.
 
 ### Encoding and Decoding
 
