--- a/jq255.md
+++ b/jq255.md
@@ -195,7 +195,7 @@ The pseudocode assumes that the following functions are available:
   - `secure_random(m)`, for an integer `m >= 1`, returns a sequence of
     `m` random bytes obtained from a cryptographically secure source,
     with a uniform probability distribution (e.g. `/dev/urandom` or the
-    `getrandom()` system call on many Unix-like operating syustems).
+    `getrandom()` system call on many Unix-like operating systems).
     This is used only for private key generation in the specification of
     high-level protocols.
 
