--- a/jq255.md
+++ b/jq255.md
@@ -42,7 +42,7 @@ document:
 
   - A key exchange protocol (Diffie-Hellman).
 
-  - Map-to-curve and hash-to-curve procedures, that allow one-way
+  - Map-to-group and hash-to-group procedures, that allow one-way
     mapping of arbitrary data into group elements with purely
     constant-time implementations.
 
