--- a/jq255.md
+++ b/jq255.md
@@ -108,7 +108,7 @@ curves can be found on the [double-odd elliptic curves Web site].
     times (with `si` being the integer representant of `s`, in the `0`
     to `r-1` range).
 
-The jq255e curve parameters are the following:
+The jq255e group parameters are the following:
 
 ```
 jq255e:
