--- a/jq255.md
+++ b/jq255.md
@@ -126,7 +126,7 @@ jq255e:
      ug = -1
 ```
 
-For jq255s, the curve parameters are as follows:
+For jq255s, the group parameters are as follows:
 
 ```
 jq255s:
