Added reference to RFC 2119.

--- a/jq255.md
+++ b/jq255.md
@@ -54,6 +54,9 @@ curves can be found on the [double-odd elliptic curves Web site].
 
 ## Conventions and Notation Used in this Document
 
+  - Uppercase key words such as "MUST" or "MUST NOT" are to be interpreted
+    as described in [RFC 2119].
+
   - `x^y` denotes exponentiation of `x` by the integer `y`. This is
     applicable to any type of `x` for which a multiplication operation
     is defined (e.g. integers or finite field elements).
@@ -1403,6 +1406,7 @@ not map well to the abilities of small microcontrollers.
 
 [double-odd Jacobi quartic whitepaper]: https://eprint.iacr.org/2022/1052
 [double-odd elliptic curves Web site]: https://doubleodd.group/
+[RFC 2119]: https://www.rfc-editor.org/rfc/rfc2119
 [SageMath]: https://www.sagemath.org/
 [Legendre/Jacobi symbol]: https://en.wikipedia.org/wiki/Jacobi_symbol
 [optimized binary GCD]: https://eprint.iacr.org/2020/972
