Added a recall of the point/element duality.

--- a/jq255.md
+++ b/jq255.md
@@ -263,6 +263,8 @@ u3 = ----------------
 
 These formulas are *complete*: they work on all pairs of curve points,
 including the points `I` and `N` (that represent the neutral element).
+We can therefore use them to compute the group law, regardless of which
+representants are used for the group elements used as operands.
 
 The Jacobi quartic curve `e^2 = b'*u^4 + a'*u^2 + 1` is birationally
 equivalent to the curve with Weierstraß equation `y^2 = x*(x^2 + a*x + b)`
