Renamed neutral -> identity.

--- a/jq255.md
+++ b/jq255.md
@@ -244,9 +244,9 @@ explored.
 
 For any point `P = (e, u)` on the curve, the point `P+N` (i.e. the other
 representant of the same group element) is `P+N = (-e, -u)`. The
-*opposite* of the point `P` is `-P = (e, -u)`. The neutral element of
-the group is `{ I, N }` (i.e. `I = (1, 0)` and `N = (-1, 0)` are the two
-representants of the group neutral).
+*opposite* of the point `P` is `-P = (e, -u)`. The identity (or neutral
+element) of the group is `{ I, N }` (i.e. `I = (1, 0)` and `N = (-1, 0)`
+are the two representants of the group identity).
 
 Let `P1 = (e1, u1)` and `P2 = (e2, u2)` be two points on the curve. Their
 sum `P3 = P1 + P2 = (e3, u3)` can be computed as follows:
@@ -262,7 +262,7 @@ u3 = ----------------
 ```
 
 These formulas are *complete*: they work on all pairs of curve points,
-including the points `I` and `N` (that represent the neutral element).
+including the points `I` and `N` (that represent the identity).
 We can therefore use them to compute the group law, regardless of which
 representants are used for the group elements used as operands.
 
@@ -311,10 +311,10 @@ recommended: a point `P = (e, u)` is represented by the quadruplet
 
 These coordinates are called *EZUT coordinates*.
 
-The points `I` and `N`, which represent the neutral element in the group,
+The points `I` and `N`, which represent the identity element in the group,
 have coordinates `(Z:Z:0:0)` and `(-Z:Z:0:0)`, respectively, for any
 field element `Z != 0`. It does not matter, for correct computations, which
-of `I` or `N` is used to represent the neutral; similarly, any non-zero `Z`
+of `I` or `N` is used to represent the identity; similarly, any non-zero `Z`
 can be used.
 
 *Extended affine coordinates* are a special case of extended coordinates
@@ -534,9 +534,9 @@ def same_element(P1, P2):
 ```
 
 This function handles all cases properly, including when one or both
-of the operands represent the group neutral.
+of the operands represent the group identity.
 
-A consequence is that a point `P = (E:Z:U:T)` represents the neutral
+A consequence is that a point `P = (E:Z:U:T)` represents the identity
 element in the group if and only if `U = 0`.
 
 ### Field to Point Map
@@ -567,7 +567,7 @@ The field element `f` is mapped to a point as follows:
 ```python
 def map_to_jq255e(f):
     if f == GFq(0):
-        return (GFq(1), GFq(1), GFq(0), GFq(0))   # 0 is mapped to the neutral
+        return (GFq(1), GFq(1), GFq(0), GFq(0))   # 0 is mapped to the identity
     x1 = 4*(f**2) - 7
     x2 = (4*(f**2) + 7)*sqrtm1   # sqrtm1 is the non-negative square root of -1
     x0 = 4*f
@@ -665,13 +665,13 @@ window optimization and recoding of the scalar:
     most-to-least significant order:
 
      1. Set an accumulator element `R` corresponding to the most significant
-        digit, i.e. to the group neutral if the digit is zero, or by
+        digit, i.e. to the group identity if the digit is zero, or by
         looking up the value in the window otherwise.
 
      2. Process all other digits in most-to-least significant order.
         For each digit `d`, first multiply `R` by `2^w` (using
         the `point_xdouble()` function); then, look up point `Q = d*P`
-        (if `d = 0`, then `Q` is the group neutral; if `d > 0`, then
+        (if `d = 0`, then `Q` is the group identity; if `d > 0`, then
         the point `Q` is found in the window; if `d < 0`, find `(-d)*P`
         in the window and negate it to get `Q`) and add `Q` to `R`.
 
@@ -960,11 +960,11 @@ hence, only one iteration of the loop will be used in practice.
 
 #### Public Keys
 
-A *public key* is a non-neutral group element. The public key `Q`
+A *public key* is a non-identity group element. The public key `Q`
 corresponds to the private key `sk` such that `Q = sk*G`, with `G` being
 the conventional generator. A public key is decoded and encoded as a
 group element, with the additional provision that, upon decoding,
-the neutral element is rejected.
+the identity element is rejected.
 
 ```python
 def public_key_encode(Q):
@@ -1149,9 +1149,9 @@ a total length of 48 bytes.
 
 The per-signature nonce `k` is a scalar. The nonce may conceptually have
 value zero (though this is very improbable); thus, the commitment `R`
-may be the neutral element. This is why `R` must be encoded with
+may be the identity element. This is why `R` must be encoded with
 `group_encode()` and not `public_key_encode()` (public keys *cannot* be
-the neutral element).
+the identity element).
 
 The `generate_nonce()` function incarnates a process known as
 *derandomization*. Generally speaking, the nonce `k` should be generated
