Added description that "+" means "+" and so forth.

--- a/jq255.md
+++ b/jq255.md
@@ -57,6 +57,13 @@ curves can be found on the [double-odd elliptic curves Web site].
   - Uppercase key words such as "MUST" or "MUST NOT" are to be interpreted
     as described in [RFC 2119].
 
+  - `+`, `-` and `*` have their usual respective meanings of addition,
+    subtraction and multiplication when applied to elements of a ring
+    (e.g. integers, or a finite field). `/` denotes division, i.e.
+    multiplication of the left operand by an inverse of the right
+    operand. `+` and `-` are also be applied to group elements to embody
+    the group law.
+
   - `x^y` denotes exponentiation of `x` by the integer `y`. This is
     applicable to any type of `x` for which a multiplication operation
     is defined (e.g. integers or finite field elements).
