--- a/jq255.md
+++ b/jq255.md
@@ -891,7 +891,7 @@ For jq255e, `r` is slightly below `2^254`, so the two most significant bits
 of the last byte of the encoding are always zero. As with the decoding
 of field elements, the scalar decoder MUST NOT ignore either or both of
 these two bits. For jq255s, only the most significant bit is guaranteed
-to be zero, since `r`, for that curve, is slightly *above* `2^254`.
+to be zero, since `r`, for that group, is slightly *above* `2^254`.
 
 #### Group Elements
 
