--- a/jq255.md
+++ b/jq255.md
@@ -1225,7 +1225,7 @@ R = s0*G + s1*((2^128)*G) + c*(-Q)
 ```
 which is a linear combination of three points (`G`, `(2^128)*G` and `Q`)
 with coefficients that all fit on 128 bits each. In a double-and-add
-alglorithm, the point doublings for the three multiplications can be
+algorithm, the point doublings for the three multiplications can be
 mutualized, using Straus's method (also colloquially known as "Shamir's
 trick"). The points `G` and `(2^128)*G` are fixed constants; appropriate
 tables of small multiples of these points can be generated in advance
