--- a/jq255.md
+++ b/jq255.md
@@ -550,7 +550,7 @@ element in the group if and only if `U = 0`.
 
 We define two field-to-point maps (for jq255e and jq255s, respectively)
 which turn a given field element into a group element (really, a curve
-point) such that the discrete logarithm of the output relatively to the
+point) such that the discrete logarithm of the output relative to the
 conventional generator is unknown. These maps can be implemented in an
 efficient and safe (constant-time) way.
 
