--- a/jq255.md
+++ b/jq255.md
@@ -569,7 +569,7 @@ root, i.e.:
 sqrtm1 = 7656063742463026568679823572395325799027601838558345258426535816504372595438
 ```
 
-The field element `f` is mapped to a point as follows:
+The field element `f` is mapped to a point in EZUT coordinates as follows:
 
 ```python
 def map_to_jq255e(f):
