--- a/jq255.md
+++ b/jq255.md
@@ -782,7 +782,7 @@ The splitting process can be done efficiently with operations on plain
 integers; it involves some rounded divisions, but these can be
 simplified into only multiplications and shifts thanks to the specific
 value of the group order `r`. For details, refer to the [double-odd
-elliptic curves whitepaper][] (section 6.2). Once `s` has been split
+elliptic curves whitepaper] (section 6.2). Once `s` has been split
 into `s0` and `s1`, the double-and-add algorithm described in the
 previous section can be modified with *two* windows, the second window
 containing points `zeta(j*P)`, and only half the number of point
