--- a/jq255.md
+++ b/jq255.md
@@ -794,7 +794,7 @@ doublings.
 operations. We specify here how these operations are performed, and
 in particular all encoding rules and handling of invalid inputs.
 
-The primitives below use the [BLAKE2][] hash function, specifically
+The primitives below use the [BLAKE2] hash function, specifically
 its BLAKE2s variant with a 32-byte (256-bit) output. The pseudocode
 expects the following API (which is compatible with Python's standard
 `hashlib`):
