--- a/jq255.md
+++ b/jq255.md
@@ -845,7 +845,7 @@ When decoding, the following rules MUST be observed:
 
   - The decode MUST reject as invalid any input sequence whose length
     is not exactly 32 bytes.
-  - The integer value `z` must be recomputed by taking into account
+  - The integer value `z` MUST be recomputed by taking into account
     all input bytes completely. In particular, the most significant
     bit of the last byte MUST NOT be ignored.
   - The recomputed `z` MUST be checked to be lower than `q`. Any
