--- a/jq255.md
+++ b/jq255.md
@@ -999,7 +999,7 @@ the signature value over a given message can be verified against the
 public key corresponding to the private key used for signing.
 
 Internally, a Schnorr signature process is used; the challenge value is
-computed with the [BLAKE2][] hash function. Specifically, the BLAKE2s
+computed with the [BLAKE2] hash function. Specifically, the BLAKE2s
 function is used, with a 32-byte output (as will be described below,
 that 32-byte output is then truncated to 16 bytes, but the hash output
 length 32 is still used in the BLAKE2 parameter block).
