--- a/jq255.md
+++ b/jq255.md
@@ -1030,7 +1030,7 @@ The input message can be *raw* (an arbitrary sequence of bytes) or
       - A single byte of value `0x00` (which terminates the encoded hash
         function name).
 
-      - The have value `hv`.
+      - The hash value `hv`.
 
 The following symbolic hash function names are defined:
 
