--- a/jq255.md
+++ b/jq255.md
@@ -1192,7 +1192,7 @@ nonce generation process through test vectors. Since `generate_nonce()`
 encodes the seed length (in bytes) over 8 bytes, the seed may be
 an arbitrary sequence of up to `2^64-1` bytes.
 
-#### Signature Generation
+#### Signature Verification
 
 A signature `sig` is verified against a public key `Q` and a prepared
 message `M` with the following process:
