--- a/jq255.md
+++ b/jq255.md
@@ -1246,7 +1246,7 @@ in the same sense as, for instance, Curve25519 is argued to offer
 elements). The use of a half-width challenge `c` was already suggested
 by Schnorr in his seminal paper; the security properties and requirements
 on the hash function (here, BLAKE2s) were thoroughly analyzed by [Neven,
-Smart and Warinschi][].
+Smart and Warinschi].
 
 It has been [noted][] that while the construction with a half-width
 challenge is safe *as a signature scheme*, some advanced protocols try
