--- a/jq255.md
+++ b/jq255.md
@@ -1248,7 +1248,7 @@ by Schnorr in his seminal paper; the security properties and requirements
 on the hash function (here, BLAKE2s) were thoroughly analyzed by [Neven,
 Smart and Warinschi].
 
-It has been [noted][] that while the construction with a half-width
+It has been [noted] that while the construction with a half-width
 challenge is safe *as a signature scheme*, some advanced protocols try
 to also use signatures as commitments on a unique message: these
 protocols assume that it is infeasible for the signer to produce a
