--- a/jq255.md
+++ b/jq255.md
@@ -1352,7 +1352,7 @@ def ECDH(sk, Q, peer_pk):
 ```
 
 The derivation of the shared secret group element `P` into a secret key
-appropriate for further symmetric cryptograhic operations uses an
+appropriate for further symmetric cryptographic operations uses an
 invocation of the BLAKE2s hash function. The two exchanged public keys
 are also used as input to the hashing process; since both parties should
 obtain the same key, the two public keys are inserted in lexicographic
