Added discussion of UNIFORM_SIZE(r).

--- a/jq255.md
+++ b/jq255.md
@@ -154,6 +154,28 @@ jq255s:
      ug = 3
 ```
 
+For the group order `r`, we define `UNIFORM_SIZE(r)` as the minimum size
+(in bytes) of a uniformly random input string such that interpreting
+that string as an integer (using the unsigned little-endian convention),
+and then reducing it modulo `r`, yields a value which is
+indistinguishable from a uniformly selected integer modulo `r`, up to
+the security level that is normally expected from a group of order `r`.
+In practice, we use the following formulas (with `log2()` being the
+logarithm in base 2 and `abs()` the absolute value):
+
+```
+lr = round(log2(r))
+usl = max(lr, log2(abs(r - 2^lr)) + lr/2)
+UNIFORM_SIZE(r) = ceil(usl/8)
+```
+
+For both jq255e and jq255s, we obtain that `UNIFORM_SIZE(r) = 32`. In
+all generality, for groups with order less than `2^256`,
+`UNIFORM_SIZE()` may range up to 48, but the respective orders of jq255e
+and jq255s are sufficiently close to a power of two (namely `2^254`)
+that 32 bytes are enough to ensure the required indistinguishability
+from uniform selection.
+
 ## Group Element Operations
 
 In this section, practical procedures for computing point operations are
@@ -944,21 +966,16 @@ function produces a new private key:
 ```python
 def private_key_generate():
     while True:
-        kb = secure_random(32)
+        kb = secure_random(32)     # 32 = UNIFORM_SIZE(r)
         sk = int_to_scalar(int.from_bytes(kb, byteorder='little'))
         if sk != int_to_scalar(0):
             return sk
 ```
 
 **Note:** This function generates a random 256-bit integer, then reduces
-it modulo `r` (through the `int_to_scalar()` function). Since the value
-of `r`, in both jq255e and jq255s, is very close to a power of two, then
-this process induces only negligible bias; in the general case, one
-would need to produce a source integer substantially larger than `r`
-(e.g. 384 bits), but this is not required for jq255e and jq255s. Using a
-source 256-bit integer means that the reduction modulo `r` can be
-implemented in a simple way, without requiring a generic big integer
-division routine.
+it modulo `r` (through the `int_to_scalar()` function). The parameter
+to the call to `secure_random()` is really `UNIFORM_SIZE(r)`, which is
+equal to 32 for both jq255e and jq255s.
 
 The `private_key_generate()` function is organized as a loop so that the
 returned private key is guaranteed not to be zero. However, the
@@ -1125,7 +1142,7 @@ is detailed later on.
 
 ```python
 def generate_nonce(sk, Q, M, seed):
-    sh = hashlib.blake2s()
+    sh = hashlib.blake2s()   # BLAKE2s output size is at least UNIFORM_SIZE(r)
     sh.update(private_key_encode(sk))
     sh.update(public_key_encode(Q))
     sh.update(len(seed).to_bytes(8, byteorder='little'))
@@ -1165,15 +1182,18 @@ The `generate_nonce()` function incarnates a process known as
 randomly and uniformly among all possible scalar values. Any bias in
 this selection process may lead to private key reconstruction attacks.
 If a cryptographically secure random generator is available, then `k`
-may be obtained by simply getting 32 bytes out of that generator,
-interpreting them as a 256-bit integer, then reducing that integer
-modulo `r` (as in the private key generation process, this induces only
-negligible bias since `r` is close enough to a power of two). However,
+may be obtained by simply getting `UNIFORM_SIZE(r)` bytes out of that
+generator, interpreting them as an integer, then reducing that integer
+modulo `r` (`UNIFORM_SIZE(r) = 32` for both jq255e and jq255s). However,
 in practical implementations, a properly secure random generator is not
 necessarily available at signature generation time; the
-`generate_nonce()` function instead uses the private key, public key,
-message and optional extra seed to produce `k` in a safe way without
-requiring a random generator.
+`generate_nonce()` function shown above instead uses the private key,
+public key, message and optional extra seed to produce `k` in a safe way
+without requiring a random generator. Any cryptographically secure hash
+function with an output size of at least `UNIFORM_SIZE(r)` bytes can be
+used; in this specification, we use BLAKE2s, whose 32-byte output
+matches the value of `UNIFORM_SIZE(r)` for both jq255e and jq255s. For
+reproducibility of test vectors, it is RECOMMENDED to use BLAKE2s.
 
 The `seed` parameter is optional. If set to a fixed value (e.g. the
 empty byte sequence, of length 0), then `generate_nonce()` is fully
@@ -1406,12 +1426,20 @@ then implicitly reduced modulo `q`; this is unlike unlike
 `field_decode()`, the latter function rejecting out-of-range inputs
 instead.
 
-**Rationale:** The two invocations of BLAKE2s could be replaced with a
-single hashing operation, provided that a hash value with a 64-byte
-output is used. We prefer to use BLAKE2s here, because most standard
-hash functions with a 64-byte output (e.g. SHA-512 or BLAKE2b)
-internally use large states and operations on 64-bit integers that do
-not map well to the abilities of small microcontrollers.
+**Rationale:** Contrary to the previously discussed cases of generating
+random scalars (in `private_key_generate()` and in `generate_nonce()`),
+it is not required, for proper security, that the `f1` and `f2` field
+elements be obtained with a distribution indistinguishable from uniform
+randomness. However, it is still needed that each of `f1` and `f2` be
+obtained through reducing an integer obtained from a pseudorandomly
+generated byte sequence at least as large as the group order `r` itself.
+For both jq255e and jq255s, this means obtaining two 32-byte sequences,
+for a total of 64 bytes. These 64 bytes could be obtained with a single
+invocation of a hash function with a 64-byte output (such as SHA-512 or
+BLAKE2b); however, we prefer to use BLAKE2s, which maps better to the
+abilities of small 32-bit microcontrollers. BLAKE2s has an output size
+of 32 bytes; this is why there are two invocations of BLAKE2s in the
+`hash_to_group()` function specified above.
 
 [double-odd Jacobi quartic whitepaper]: https://eprint.iacr.org/2022/1052
 [double-odd elliptic curves Web site]: https://doubleodd.group/
