Moved some encoding/decoding rules earlier.
The low-level encoding rules (finite field, and group elements)
are now presented in the low-level part, while high-level encoding
rules (scalars, keys) are kept in the high-level part.

--- a/jq255.md
+++ b/jq255.md
@@ -373,7 +373,63 @@ successive point doublings is to convert the source point from EZUT to
 XWJ coordinates, compute the doublings in XWJ, then convert the result
 back into EZUT coordinates. Such a strategy is used later in doubling formulas.
 
-### Encoding and Decoding
+### Encoding and Decoding (Group Elements)
+
+All encodings specified in this document are expressed in terms of
+*bytes*. We use the term "byte" to denote what is, formally speaking, an
+*octet* (a group of eight bits). A byte has a numerical value in the 0
+to 255 range. The least significant bit of the byte has weight 1, while
+the most significant bit has weight 128.
+
+Encoding formats are fixed-size sequences of bytes. Within a sequence,
+the first byte has index 0, the next byte has index 1, and so on;
+thus, the last byte of a 32-byte sequence has index 31.
+
+#### Field Elements
+
+A field element `x` is encoded as a fixed 32-byte sequence using the
+unsigned little-endian convention:
+
+```python
+def field_encode(x):
+    return int(x).to_bytes(32, byteorder='little')
+```
+
+In other words:
+
+  - The field element is considered as an integer `z` in the `0` to `q-1`
+    range.
+  - For `j = 0` to `31`, output byte of index `j` is set to the
+    integer value `bb[j] = floor(z / (256^j)) mod 256`.
+
+Since `q` is slightly below `2^255`, the last output byte (index 31)
+necessarily has value at most 127, which means that the most significant
+bit of that byte is necessarily equal to 0.
+
+When decoding, the following rules MUST be observed:
+
+  - The decode MUST reject as invalid any input sequence whose length
+    is not exactly 32 bytes.
+  - The integer value `z` MUST be recomputed by taking into account
+    all input bytes completely. In particular, the most significant
+    bit of the last byte MUST NOT be ignored.
+  - The recomputed `z` MUST be checked to be lower than `q`. Any
+    implicit or explicit reduction modulo `q` is incorrect. If
+    `z >= q`, then the decoder MUST reject the input.
+
+The following function implements these rules:
+
+```python
+def field_decode(bb):
+    if len(bb) != 32:
+        return False
+    z = int.from_bytes(bb, byteorder='little')
+    if z >= q:
+        return False
+    return GFq(z)
+```
+
+#### Group Elements
 
 A group element, represented by the point `P = (E:Z:U:T)`, can be
 encoded unambiguously into a field element `v` as follows:
@@ -414,6 +470,30 @@ such element. Take care that `sqrt()` MUST return the non-negative root.
 
 **Note:** The decoding process naturally returns a point in (extended)
 affine coordinates (`Z = 1`).
+
+The `group_to_field()` and `field_to_group()` functions implements
+encoding/decoding of group elements to/from field elements.
+Serialization to bytes is then obtained by combining these operations
+with the serialization rules of field elements, as shown below:
+
+```python
+def group_encode(P):
+    return field_encode(group_to_field(P))
+
+def group_decode(bb):
+    v = field_decode(bb)
+    if v is False:
+        return False
+    return field_to_group(v)
+```
+
+**Note:** When decoding, both the decoding of the bytes to a field
+element, and the decoding of the field element to a group element, may
+fail (i.e. return `False`). If a strictly constant-time process is
+required, that does not even leak whether the process succeeded or not,
+or the cause of the failure, then the test on the output of the
+`field_decode()` call can be delayed until the end of the function,
+invoking `field_to_group()` on some conventional value in that case.
 
 ### Point Addition
 
@@ -830,66 +910,12 @@ expects the following API (which is compatible with Python's standard
   - `sh.digest()` finalizes the computation and returns the 32-byte
     BLAKE2s output.
 
-### Encoding Rules
+### Encoding and Decoding (Scalars and Keys)
 
-All encodings here are expressed in terms of *bytes*. We use the term
-"byte" to denote what is, formally speaking, an *octet* (a group of
-eight bits). A byte has a numerical value in the 0 to 255 range. The
-least significant bit of the byte has weight 1, while the most
-significant bit has weight 128.
-
-Encoding formats are fixed-size sequences of bytes. Within a sequence,
-the first byte has index 0, the next byte has index 1, and so on;
-thus, the last byte of a 32-byte sequence has index 31.
-
-#### Field Elements
-
-A field element `x` is encoded as a fixed 32-byte sequence using the
-unsigned little-endian convention:
-
-```python
-def field_encode(x):
-    return int(x).to_bytes(32, byteorder='little')
-```
-
-In other words:
-
-  - The field element is considered as an integer `z` in the `0` to `q-1`
-    range.
-  - For `j = 0` to `31`, output byte of index `j` is set to the
-    integer value `bb[j] = floor(z / (256^j)) mod 256`.
-
-Since `q` is slightly below `2^255`, the last output byte (index 31)
-necessarily has value at most 127, which means that the most significant
-bit of that byte is necessarily equal to 0.
-
-When decoding, the following rules MUST be observed:
-
-  - The decode MUST reject as invalid any input sequence whose length
-    is not exactly 32 bytes.
-  - The integer value `z` MUST be recomputed by taking into account
-    all input bytes completely. In particular, the most significant
-    bit of the last byte MUST NOT be ignored.
-  - The recomputed `z` MUST be checked to be lower than `q`. Any
-    implicit or explicit reduction modulo `q` is incorrect. If
-    `z >= q`, then the decoder MUST reject the input.
-
-The following function implements these rules:
-
-```python
-def field_decode(bb):
-    if len(bb) != 32:
-        return False
-    z = int.from_bytes(bb, byteorder='little')
-    if z >= q:
-        return False
-    return GFq(z)
-```
-
-Any application or outer protocol may reuse the most significant bit of
-the last byte to store some other data element, provided that the bit is
-restored to its proper value (0) before giving the byte sequence as
-argument to `field_decode()`.
+Encoding rules for group elements were detailed previously
+(functions `group_encode()` and `group_decode()`). High-level
+operations use specific encoding rules for scalars, private keys,
+and public keys.
 
 #### Scalars
 
@@ -914,30 +940,6 @@ of the last byte of the encoding are always zero. As with the decoding
 of field elements, the scalar decoder MUST NOT ignore either or both of
 these two bits. For jq255s, only the most significant bit is guaranteed
 to be zero, since `r`, for that group, is slightly *above* `2^254`.
-
-#### Group Elements
-
-Group elements are encoded to bytes by first encoding them to field
-elements, then encoding the field elements to bytes:
-
-```python
-def group_encode(P):
-    return field_encode(group_to_field(P))
-
-def group_decode(bb):
-    v = field_decode(bb)
-    if v is False:
-        return False
-    return field_to_group(v)
-```
-
-**Note:** When decoding, both the decoding of the bytes to a field
-element, and the decoding of the field element to a group element, may
-fail (i.e. return `False`). If a strictly constant-time process is
-required, that does not even leak whether the process succeeded or not,
-or the cause of the failure, then the test on the output of the
-`field_decode()` call can be delayed until the end of the function,
-invoking `field_to_group()` on some conventional value in that case.
 
 #### Private Keys
 
